# niterpack

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml  release.yml
example/: README.md  niter.json  niter.toml
example/config/jei/: jei-client.ini
example/mods/: jei-1.18.2-9.7.1.255.json  jei.json  jei.toml
src/: error.rs  log.rs  logger.rs  main.rs  manifest.rs  project.rs  source.rs
src/commands/: add.rs  build.rs  init.rs  mod.rs  remove.rs
src/format/: error.rs  ext.rs  mainfile.rs  mod.rs  modfile.rs
src/modpack/: mod.rs
src/modrinth/: error.rs  mod.rs
src/ops/: build.rs  mod.rs
src/parse/: error.rs  mod.rs
src/project/: mod.rs  source.rs
src/subcommand/: add.rs  build.rs  init.rs  mod.rs  remove.rs
src/toml/: mod.rs
src/util/: mod.rs
src/util/modrinth/: mod.rs
src/util/mrpack/: mod.rs
