[package]
name = "niterpack"
version = "0.1.0-rc.0"
description = "A CLI tool for managing and packing Minecraft modpacks"
repository = "https://github.com/panda885/niter"
license = "MIT OR Apache-2.0"
authors = ["Panda885"]
categories = ["command-line-utilities"]
keywords = ["Minecraft", "modpack"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "niter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

reqwest = { version = "0.11", features = ["blocking"] }
url = "2.3"

termcolor = "1.2"
thiserror = "1.0"
log = { version = "0.4", features = ["std"] }
eyre = "0.6"
