[package]
name = "niterpack"
version = "0.1.0-rc.1"
description = "A modern command-line tool for creating Minecraft modpacks"
repository = "https://github.com/niterpack/niterpack"
license = "MIT OR Apache-2.0"
authors = ["Panda885"]
categories = ["command-line-utilities"]
keywords = ["Minecraft", "modpack"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "niter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

lazy-regex = "2.5"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.3"

thiserror = "1.0"
log = "0.4"
eyre = "0.6"
console = "0.15.7"
indicatif = "0.17"
